apps/traefik/internal/ingress-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik-internal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-internal/traefik-dashboard-basicauth@kubernetescrd
spec:
  ingressClassName: traefik-internal
  tls:
  - hosts:
    - traefik.devirthas.com
    secretName: wildcard-devirthas-tls
  rules:
  - host: traefik.devirthas.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-internal
            port:
              name: traefik
